--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,4 +1,4 @@
-body {
+/* body {
     font-family: 'Lato', sans-serif;
 }
 
@@ -54,4 +54,88 @@ body {
     .icons{
         padding: 50px;
     }
+} */
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.header {
+  height: 4rem;
+}
+
+.hero {
+  background-image: linear-gradient(0deg, rgb(0, 0, 0, 0.7), rgb(0, 0, 0, 0.7)),
+    url("../images/flowershop.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 50vh;
+}
+
+.hero > .container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-items: center;
+  justify-content: space-evenly;
+  text-align: center;
+  padding: 10rem;
+  color: white;
+}
+
+h1 {
+  margin-bottom: 2rem;
+}
+
+.btn-primary {
+  background-color: rgb(82, 209, 82);
+  border-color: rgb(82, 209, 82);
+}
+
+.btn-primary:hover {
+  background-color: rgb(82, 209, 82);
+  border-color: rgb(82, 209, 82);
+}
+
+.btn-lg {
+  border-radius: 1.5rem;
+}
+
+.description {
+  background-color: rgb(178, 202, 178);
+  min-height: 30vh;
+}
+
+.description > .container {
+  padding: 2rem;
+}
+
+.col-lg-3 {
+  display: flex;
+  flex-direction: row;
+  justify-items: center;
+  align-items: center;
+  justify-content: center;
+}
+
+.col-md-6,
+.col-sm-12,
+.col-xs-12 {
+  justify-content: flex-start;
+}
+.col-lg-3 > img {
+  width: 50px;
+  height: 50px;
+}
+
+@media only screen and (max-width: 600px) {
+  .btn-lg {
+    width: 10rem;
+  }
+
+  .description {
+    background-color: rgb(178, 202, 178);
+    min-height: 50vh;
+  }
 }
