--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,57 +1,69 @@
 body {
-    font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+}
+
+.overlay {
+  background-color: black;
+  height: 100vh;
+  width: 100%;
+  opacity: 0.5;
+  position: absolute;
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
-    background-size: cover;
-    background-blend-mode: overlay;
-    background-color:#444444;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0px;
+  position: relative;
+  background: url("../images/flowershop.jpg") no-repeat center center;
+  background-size: cover;
+  background-blend-mode: overlay;
+  /* background-color:#444444; */
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0px;
+  flex-direction: column;
 }
 
-.heading, #learn-more {
-    text-align: center;
-    color:#FFFFFF;
+.heading,
+#learn-more {
+  text-align: center;
+  color: #ffffff;
+  z-index: 1;
 }
 
 #learn-more {
-    background-color: #7ED321;
-    padding: 7px 15px 7px 15px;
-    border-radius: 100px;
-    font-size: 3vh;
-    font-weight: 800;
-    margin-top: 5vh;
+  background-color: #7ed321;
+  padding: 7px 15px 7px 15px;
+  border-radius: 100px;
+  font-size: 3vh;
+  font-weight: 800;
+  margin-top: 5vh;
 }
 
 .icons {
-    background-color: #CEE7B5;
+  background-color: #cee7b5;
 }
 
 .icon {
-    min-width:50px;
+  min-width: 50px;
 }
 
 .icon-text {
-    display: flex;
-    align-items: center;
-    height: 15vh;
+  display: flex;
+  align-items: center;
+  height: 15vh;
 }
 
 .icon-text > p {
-    font-size: 3vh;
+  font-size: 3vh;
 }
 
 .icon-block {
-    margin-top: 10vh;
+  margin-top: 10vh;
 }
 
-@media(min-width:400px) {
-    .icons{
-        padding: 50px;
-    }
+@media (min-width: 400px) {
+  .icons {
+    padding: 50px;
+  }
 }
