--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,13 +1,15 @@
 body {
     font-family: 'Lato', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background: url("../images/flowershop.jpg") no-repeat center center;
     background-size: cover;
     background-blend-mode: overlay;
     background-color:#444444;
-    height: 100vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,11 +36,13 @@ body {
 
 .icon {
     min-width:50px;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .icon-text {
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
     height: 15vh;
 }
 
