--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,53 +1,71 @@
 body {
     font-family: 'Lato', sans-serif;
+    padding: 0;
+    margin: 0;
+    background-color: rgb(173, 231, 163)
 }
 
-.banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+
+.logoHeader {
+    padding: 10px;
+    background-color: white;
+}
+
+.flowerShopBanner {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.801), rgba(0, 0, 0, 0.63)), url(../images/flowershop.jpg);
     background-size: cover;
-    background-blend-mode: overlay;
-    background-color:#444444;
-    height: 100vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 0px;
+    flex-direction: column;
 }
 
-.heading, #learn-more {
+#beautifulFlowers {
+    font-size: 50px;
+    color: white;
     text-align: center;
-    color:#FFFFFF;
+    padding-bottom: 20px;
 }
 
-#learn-more {
-    background-color: #7ED321;
-    padding: 7px 15px 7px 15px;
-    border-radius: 100px;
-    font-size: 3vh;
-    font-weight: 800;
-    margin-top: 5vh;
+#learnMore {
+    border-radius: 70px;
+    background-color: rgb(187, 214, 32);
+    color: white;
+    width: 180px;
+    height: 50px;
+    font-size: 30px;
+    text-align: center;
 }
 
-.icons {
-    background-color: #CEE7B5;
+.feature {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
+
+.feature h2 {
+    width: 50%;
+    padding-left: 10%;
+}
+
+.container {
+    padding: 0;
+    display: flex;
+    padding-top: 40px;
+}
+
 
 .icon {
-    min-width:50px;
+    width: 40%;
 }
 
-.icon-text {
-    display: flex;
-    align-items: center;
-    height: 15vh;
+.shopFeatures {
+    background-color: rgb(173, 231, 163);
 }
 
-.icon-text > p {
-    font-size: 3vh;
-}
-
-.icon-block {
-    margin-top: 10vh;
+.text {
+    font-size: 20px;
 }
 
 @media(min-width:400px) {
