--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -3,7 +3,7 @@ body {
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background: url("../images/flowershop.jpg") no-repeat center center;
     background-size: cover;
     background-blend-mode: overlay;
     background-color:#444444;
@@ -12,6 +12,11 @@ body {
     justify-content: center;
     align-items: center;
     margin-bottom: 0px;
+    text-align: center;
+}
+
+.container {
+    margin: 0;
 }
 
 .heading, #learn-more {
@@ -26,24 +31,38 @@ body {
     font-size: 3vh;
     font-weight: 800;
     margin-top: 5vh;
+    border-color: #7ED321;
+}
+.col-md-6 {
+    display: flex;
+    margin-top: 10vh;
+    padding-left: 6vw;
 }
 
 .icons {
     background-color: #CEE7B5;
+    display: flex;
+    justify-content: center;
+    padding-left: 20px;
+    
+    
 }
 
 .icon {
     min-width:50px;
+    
 }
 
 .icon-text {
     display: flex;
     align-items: center;
     height: 15vh;
+    padding-left: 3vw;
 }
 
 .icon-text > p {
     font-size: 3vh;
+    
 }
 
 .icon-block {
