--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -3,7 +3,7 @@ body {
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background: url("/code/FTWD_Web_Day_03/Exercise_B/assets/images/flowershop.jpg") no-repeat center center;
     background-size: cover;
     background-blend-mode: overlay;
     background-color:#444444;
@@ -11,9 +11,15 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;  
     margin-bottom: 0px;
 }
 
+.head{
+    color: white;
+    font-size: 50px;
+    text-align: center;
+}
 .heading, #learn-more {
     text-align: center;
     color:#FFFFFF;
@@ -48,7 +54,7 @@ body {
 
 .icon-block {
     margin-top: 10vh;
-}
+} 
 
 @media(min-width:400px) {
     .icons{
