--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,9 +1,32 @@
 body {
     font-family: 'Lato', sans-serif;
+    padding: 0;
+    margin: 0;
 }
 
+header {
+    width: 100vw;
+    height: 60 px;
+    background-color: #ffffff;
+  }
+
+header img {
+    height: 100%;
+    padding-top: 10px;
+    padding-left: 20px;
+  }
+.top {
+    background-image: url("../images/flowershop.jpg");
+    height: 70vh;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background: url("../images/logo.png") no-repeat center center;
     background-size: cover;
     background-blend-mode: overlay;
     background-color:#444444;
@@ -13,6 +36,38 @@ body {
     align-items: center;
     margin-bottom: 0px;
 }
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    opacity: 0.5;
+    position: absolute;
+  }
+
+  .heading {
+    z-index: 5;
+    font-family: sans-serif;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .heading h1 {
+    color: #ffffff;
+    font-size: 40px;
+  }
+  .heading button {
+    color: #ffffff;
+    font-size: 25px;
+    height: 50px;
+    width: 170px;
+    border: none;
+    background: #7ed321;
+    border-radius: 10px;
+  }
 
 .heading, #learn-more {
     text-align: center;
@@ -42,12 +97,8 @@ body {
     height: 15vh;
 }
 
-.icon-text > p {
-    font-size: 3vh;
-}
-
-.icon-block {
-    margin-top: 10vh;
+.container-fluid{
+    background-color: cadetblue;
 }
 
 @media(min-width:400px) {
@@ -55,3 +106,14 @@ body {
         padding: 50px;
     }
 }
+
+.container-fluid img{
+    padding-top: 100px;
+    width: 20%;
+}
+
+.container-fluid h3{
+    font-size: 1rem;
+}
+
+
