--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -3,7 +3,7 @@ body {
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background: url("../images/flowershop.jpg") no-repeat center center;
     background-size: cover;
     background-blend-mode: overlay;
     background-color:#444444;
@@ -22,10 +22,14 @@ body {
 #learn-more {
     background-color: #7ED321;
     padding: 7px 15px 7px 15px;
-    border-radius: 100px;
+    border-radius: 50px;
     font-size: 3vh;
     font-weight: 800;
     margin-top: 5vh;
+}
+
+.row .icon .icons{
+    margin-bottom: 10px;
 }
 
 .icons {
@@ -54,4 +58,8 @@ body {
     .icons{
         padding: 50px;
     }
+    .icon-text {
+    text-align: center;
+    }
 }
+
