--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,39 +1,77 @@
 body {
     font-family: 'Lato', sans-serif;
+    padding:0;
+    margin:0;
+}
+.header {
+    width:100vw;
+    height:70px;
+    background-color:white;
+}
+#happy {
+    height: 100%;
+    padding-top: 10px;
+    padding-left: 80px;
+  }
+
+.h1{
+    font-size:40px;
+    color:white;
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
-    background-size: cover;
-    background-blend-mode: overlay;
-    background-color:#444444;
+    background-color:black;
+     background-size:cover;
+     position: relative;
     height: 100vh;
+    margin-bottom: 0px;
+    color:white;
     display: flex;
+    flex-wrap: wrap;
+    }
+
+.heading {
+    background-image: url("https://upload.cc/i1/2020/08/28/vCP5Ub.jpg");
+    background-size:cover;
+    width: 100%;
+    height: 100%;
+    opacity: 0.50;
+    position:absolute;
+    text-align:center;
     justify-content: center;
     align-items: center;
-    margin-bottom: 0px;
-}
-
-.heading, #learn-more {
-    text-align: center;
-    color:#FFFFFF;
-}
+    }
 
 #learn-more {
+    color: #ffffff;
     background-color: #7ED321;
-    padding: 7px 15px 7px 15px;
+    text-align:center;
     border-radius: 100px;
-    font-size: 3vh;
+    padding: 7px 15px 7px 15px;
+    height: 50px;
+    width: 170px;
+    font-size: 20px;
     font-weight: 800;
     margin-top: 5vh;
 }
 
 .icons {
     background-color: #CEE7B5;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    padding-top: 40px;
+    padding-bottom: 50px;
 }
 
 .icon {
     min-width:50px;
+    width: 100px;
+    height: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .icon-text {
