--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -3,7 +3,7 @@ body {
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background: url("../images/flowershop.jpg") no-repeat center center;
     background-size: cover;
     background-blend-mode: overlay;
     background-color:#444444;
@@ -23,10 +23,16 @@ body {
     background-color: #7ED321;
     padding: 7px 15px 7px 15px;
     border-radius: 100px;
-    font-size: 3vh;
+    font-size: 4vh;
     font-weight: 800;
     margin-top: 5vh;
 }
+
+.d-flex{
+    align-items: center;
+    justify-content: center;
+}
+
 
 .icons {
     background-color: #CEE7B5;
@@ -34,16 +40,18 @@ body {
 
 .icon {
     min-width:50px;
+width: 30%
 }
+
 
 .icon-text {
-    display: flex;
+    display: inline-block;
     align-items: center;
+    justify-content: center;
     height: 15vh;
 }
-
 .icon-text > p {
-    font-size: 3vh;
+    font-size: 2.5vh;
 }
 
 .icon-block {
