--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -3,11 +3,9 @@ body {
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background-image: url("./assets/flowershop.jpg") no-repeat center center;
     background-size: cover;
-    background-blend-mode: overlay;
-    background-color:#444444;
-    height: 100vh;
+    height: 70vh;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -47,7 +45,9 @@ body {
 }
 
 .icon-block {
+    display: flex;
     margin-top: 10vh;
+    flex-direction: row;
 }
 
 @media(min-width:400px) {
