adding my exercise

--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -3,7 +3,7 @@ body {
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background-image: url("./assets/flowershop.jpg");
     background-size: cover;
     background-blend-mode: overlay;
     background-color:#444444;
