--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -42,32 +42,16 @@ body {
     padding: 20px;
 }
 
-.col {
-    display: flex;
-    min-width: 200px;
-    max-width: 300px;
-}
-
-.container {
-    margin-top: 0;
-}
-
 .icon img{
-    max-width: 50%;
-    max-height: 50%;
+    max-width: 50px;
+    max-height: 50px;
 }
 
 .icon {
     display: flex;
-    min-width:50px;
     flex-direction: row;
     align-items: center;
-}
-
-.row {
-    display: flex;
-    justify-content: space-evenly;
-}
+} 
 
 .icon-text {
     display: flex;
