--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,57 +1,70 @@
 body {
-    font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
-    background-size: cover;
-    background-blend-mode: overlay;
-    background-color:#444444;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 0px;
+  background-image: url(../images/flowershop.jpg);
+  /* assets/images/flowershop.jpg */
+  height: 100vh;
+}
+/* .banner {
+  background-image: url(./images/flowershop.jpg);
+  background-size: cover;
+  background-blend-mode: overlay;
+  background-color: #444444;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 0px;
+} */
+
+.heading {
+  text-align: center;
+  color: #ffffff;
+  padding-top: 10%;
 }
 
-.heading, #learn-more {
-    text-align: center;
-    color:#FFFFFF;
+.learnbut {
+  background-color: #7ed321;
+  padding: 7px 15px 7px 15px;
+  border-radius: 100px;
+  font-size: 3vh;
+  font-weight: 800;
+  margin-top: 5vh;
 }
 
-#learn-more {
-    background-color: #7ED321;
-    padding: 7px 15px 7px 15px;
-    border-radius: 100px;
-    font-size: 3vh;
-    font-weight: 800;
-    margin-top: 5vh;
+.container {
+  background-color: #cee7b5;
+  margin-top: 20px;
+  padding-top: 20px;
+  /* display: grid;
+  grid-template-columns: auto auto auto auto; */
 }
-
 .icons {
-    background-color: #CEE7B5;
+  background-color: #cee7b5;
 }
 
 .icon {
-    min-width:50px;
+  min-width: 50px;
 }
 
 .icon-text {
-    display: flex;
-    align-items: center;
-    height: 15vh;
+  display: flex;
+  align-items: center;
+  height: 15vh;
 }
 
 .icon-text > p {
-    font-size: 3vh;
+  font-size: 3vh;
 }
 
 .icon-block {
-    margin-top: 10vh;
+  margin-top: 10vh;
 }
 
-@media(min-width:400px) {
-    .icons{
-        padding: 50px;
-    }
+@media (min-width: 400px) {
+  .icons {
+    padding: 50px;
+  }
 }
