--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,14 +1,18 @@
+
 body {
     font-family: 'Lato', sans-serif;
+    font-size: 15pt;
 }
 
 .banner {
-    background: url("./assets/flowershop.jpg") no-repeat center center;
+    background: url("../images/flowershop.jpg") no-repeat center center;
     background-size: cover;
     background-blend-mode: overlay;
     background-color:#444444;
+    width:100%;
     height: 100vh;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     margin-bottom: 0px;
@@ -29,11 +33,15 @@ body {
 }
 
 .icons {
-    background-color: #CEE7B5;
+    background-color: rgb(206, 231, 181);
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .icon {
-    min-width:50px;
+    width:10vmin;
+    height:10vmin;
+    margin-right: 1vw;
 }
 
 .icon-text {
@@ -43,11 +51,14 @@ body {
 }
 
 .icon-text > p {
-    font-size: 3vh;
+    font-size: 3 vmin;
+    margin:0;
+    text-align: center;
 }
 
 .icon-block {
     margin-top: 10vh;
+    display: flex;
 }
 
 @media(min-width:400px) {
