--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,91 @@
 /* Your CSS code here */
+
+* {font-family:"Verdana, Geneva, Tahoma, sans-serif";
+}
+
+body {
+    background-color: rgb(204, 220, 250);
+}
+
+.container-fluid {
+    margin: 0%;
+    padding: 0%;
+}
+.imgHeader {
+    width: 250px;
+}
+
+.header {
+    height: 12vh;
+}
+
+.wordOverLay {
+  position: absolute;
+  color: white;
+  background-color: aliceblues;
+  font-size: 5vh;
+  z-index: 3;
+}
+
+.learnButton {
+    background-color: rgb(99, 99, 218);
+    border-radius: 22%;
+    position: relative;
+    margin: 0%;
+    top: 80px;
+    color: white;
+    font-size: 3vh;
+    z-index: 3;
+}
+
+.JumbotronImage {
+    background-image: url('/Exercise_B/assets/images/flowershop.jpg');
+    margin: 0% 0%;
+    height: 50vh;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 0;
+}
+
+.overlay {
+    width: 100%;
+    height: 100%;
+    background-color: black;
+    color: black;
+    opacity: 0.6;
+    z-index: 2;
+    position: absolute;
+  }
+
+.img-fluid {
+position: relative;
+display:block ;
+}
+
+img {
+    padding: 40px;
+    flex-wrap: wrap;
+    min-width: 100px;
+    width: 250px;
+    height: auto;
+    flex-direction: column;
+}
+
+.iconText {
+    padding-left: 10%;
+    font-size: 22px;
+    margin: 12px;
+    
+}
+
+.pic {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+}
