--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,57 @@
 /* Your CSS code here */
+* {
+    margin:0;
+    padding: 0;
+}
+
+.jumbotron {
+    background-image: url("/Exercise_B/assets/images/flowershop.jpg");
+    background-size: cover;
+    background-position: center;
+    width:100vw;
+    height:70vh;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: column;
+    position:relative;
+}
+
+.overlay {
+    background-color: rgba(0,0,0,0.5);
+    position:absolute;
+    width: 100%;
+    height: 100%;
+}
+.display-4 {
+    color: white;
+    z-index: 5;
+}
+
+.lead {
+    z-index: 5;
+}
+.lead a{
+    border-radius: 25px;
+    background-color:rgb(145, 248, 60);
+    border: 0px;
+}
+
+.container-fluid {
+    background-color: rgb(191, 231, 158);
+    padding: 5vh;
+}
+
+.col-md-3 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5%;
+}
+
+.col-md-3 img {
+    height:80px;
+    width:80px;
+}
