--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,48 @@
 /* Your CSS code here */
+body{
+    box-sizing: border-box;
+    width: 100%;
+   
+}
+
+nav{
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    margin-left: 50px;
+}
+
+.jumbotron{
+    background:linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),  url(/Exercise_B/assets/images/flowershop.jpg);
+    background-repeat: no-repeat;
+    background-size:  100% 100%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+}
+
+.jumbotron h1,h2{
+    color: white;
+    margin: 50px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.jumbotron h2{
+    background-color:#7ed321 ;
+    padding: 8px;
+    border-radius: 30px;
+}
+.bottom{
+    padding: 50px;
+    background-color:#cee7b4 
+}
+.about{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 50px 150px;
+}
+  
