--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,63 @@
-/* Your CSS code here */
+
+
+.head{
+    background:linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(/Exercise_B/assets/images/flowershop.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    width: 100%;
+    height: 80vh;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.heading{
+    letter-spacing: 3px;
+}
+
+.whitetxt{
+    color: #fff;
+}
+
+.large{
+    font-size: xx-large;
+}
+
+.medium{
+    font-size: x-large;
+}
+
+.green{
+    border-radius: 20px 20px 20px 20px;
+    background-color: rgb(122, 190, 54);
+    padding: 8px;
+}
+
+a .whitetxt{
+    color: rgba(255,255,255,0.6);
+    text-decoration: none;
+}
+
+.lrnbtn{
+    margin-top: 40px;
+}
+
+
+.footer{
+    background-color: rgb(142, 228, 163);
+    max-width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.col p{
+    text-align: center;
+    padding-top: 10%;
+}
+
+.col img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
