--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,45 @@
 /* Your CSS code here */
+.logo {
+    margin: 25px;
+}
+
+.jumbotron {
+    padding: 12%;
+    margin-bottom: 0%;
+}
+
+
+h1 {
+    color: white;
+    margin-top: 3%;
+    font-size: 5em;
+    position: relative;
+    text-align: center;
+}
+
+
+#learnMore {
+   position: relative;
+   margin-top: 6%;
+   margin-bottom: -8%;
+   font-size: 2em;
+   padding: 0.5em, 1em, 0.5em, 1em;
+   border-radius: 40px;
+}
+
+#footerContainer {
+    background-color: rgba(129, 190, 139, 0.5);
+    padding-bottom: 4.8%;
+
+}
+
+#footerSelector{
+    margin-top: 5%;
+    justify-content: space-evenly;
+    display: flex;
+    align-items: center;
+}
+
+p {
+    font-size: 120%;
+}
