--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,18 @@
 /* Your CSS code here */
+
+html {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.card img {
+    filter: brightness(30%);
+}
+
+.font-weight-bold {
+    font-weight: normal;
+}
+
+#green {
+    background-color: #cee7b4;
+    color: #cee7b4;
+}
