--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,45 @@
 /* Your CSS code here */
+* {
+  font-family: "Lato", sans-serif;
+}
+
+.jumbotron {
+  position: relative;
+  background-image: url(../images/flowershop.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 70vh;
+}
+
+.overlay-text h1 {
+  color: #fff;
+  font-size: 40px;
+}
+
+#learn-more {
+  font-size: 25px;
+  background: #7ed321;
+}
+
+div .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: black;
+  opacity: 0.6;
+}
+
+.overlay-text {
+  z-index: 100;
+}
+
+section {
+  background-color: #cee7b5;
+}
+
+p {
+    font-size: 20px;
+}
+
