--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,50 @@
 /* Your CSS code here */
+
+.display-4 {
+    font-family: 'Lato', sans-serif;
+    color: white;
+    display: flex;
+  }
+  
+  .hero_text {
+    background-image: url('./assets/images/flowershop.jpg');
+    background: url('/DE_03_Ans/Exercise_B/assets/flowershop.jpg');
+    background-size: cover;
+    background-blend-mode: overlay;
+    background-color: rgb(94, 84, 84);
+    display: flex;
+    height: 100vh;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 0px;
+  }
+  
+  button {
+    background-color: greenyellow;
+    border-radius: 90px;
+    padding: 8px 10px 8px 10px;
+    font-size: 15px;
+    font-weight: bold;
+    text-align: center;
+    border: none;
+    margin: 10% 38%;
+  }
+  
+  #icons {
+    background-color: rgb(201, 222, 157);
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+  
+  .feature {
+    margin-bottom: 30px;
+  }
+  
+  /* The icons stick together whem in iPhone-size display - How to solve it? */
+  /* @media(min-width:100px) {
+      #icons{
+          padding: 70px;
+      }
+  } */
+  
