--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,44 @@
 /* Your CSS code here */
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: rgb(215, 253, 166);
+}
+
+.jumborton {
+    background-color: white;
+}
+
+.cover {
+    height: 600px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url(/Exercise_B/assets/images/flowershop.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+h1 {
+    color: white;
+    font-weight: 400;
+    font-size: 40px;
+    margin: 20px;
+}
+
+.button {
+    background: rgb(98, 196, 0);
+    color: white;
+    font-size: 20px;
+    padding: 10px 5px;
+    border-radius: 20px;
+    width: 140px;
+    height: 40px;
+}
+
+.container-fluid {
+    margin: 50px 0;
+}
+
+.container-fluid img {
+    height: 70px;
+}
