--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,89 @@
 /* Your CSS code here */
+.img-container{
+    background-image: linear-gradient(rgba(7, 0, 0, 0.719), rgba(15, 14, 14, 0.651)), url(../images/flowershop.jpg);
+    height: 60vh;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.textandbutton{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 150px;
+    width: 700px;
+}
+
+.button{
+    background-color: rgb(66, 167, 66);
+    border-radius: 25px;
+    height: 60px;
+    width: 200px;
+}
+
+h2{
+    color: white;
+    font-size: 60px;
+}
+
+h3{
+    font-size: 30px;
+    color: white;
+}
+
+.container-fluid{
+    background-color: rgba(170, 224, 109, 0.493);
+    height: 31.7vh;
+    display: flex;
+    align-items: center;
+    justify-content:space-around;
+}
+
+.description{
+    background-color: rgba(170, 224, 109, 0.493);
+}
+
+.left{
+    /* background-color: green; */
+    height: 100%;
+    width: 50%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.right{
+    /* background-color: red; */
+    height: 100%;
+    width: 50%;
+    float: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
+.content{
+    font-size: 20px;
+}
+
+.box{
+    display: flex;
+    align-items: center;
+}
+
+.sizing{
+    height:100px;
+    width:100px;
+}
+
+.grouping{
+    height:50px;
+    width:300px;
+    display: flex;
+    align-items: center;
+}
