--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,31 @@
-/* Your CSS code here */
+* {
+    margin: 0;
+    padding: 0;
+}
+body {
+    background-color: rgb(214, 253, 196);
+}
+
+header {
+    background-color: white;
+}
+.image {
+    height: 80vh;
+    width: 100%;
+    background-image: linear-gradient(rgba(29, 22, 22, 0.651), rgba(29, 22, 22, 0.651)), url(../images/flowershop.jpg);
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.display-3 {
+    color: white;
+}
+/* .container-fluid {
+    margin-top: 5%;
+} */
+
+main  {
+    margin-top: 50px;
+}
