--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,52 @@
 /* Your CSS code here */
+.hero {
+    height: 500px;
+   background: black; 
+   position: relative;
+   text-align: center;
+   color: white;   
+   background-size: cover;
+}
+
+.background-image {
+    background-image: url("../images/flowershop.jpg");
+    background-size: cover;
+    position: relative;
+    height: 500px;
+  max-width: 100vw;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 30%;
+}
+
+.hero h1{
+color: white;
+font-weight: bold;
+font-size: 30px;
+position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.hero button {
+    background-color: yellowgreen;
+    color: white;
+    border-radius: 20px;
+    height: 40px;
+    width: 140px;
+    font-size: 25px;
+    border: none;
+    position: absolute;
+  top: 70%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.container img {
+  height: 50px;
+  width: 50px;
+  float: left;
+  padding: 10px;
+}
