With pleasure I present to you my Daily Challenges for Day 03

--- a/Exercise_B/assets/style/stylesheet.css
+++ b/Exercise_B/assets/style/stylesheet.css
@@ -1,1 +1,66 @@
 /* Your CSS code here */
+
+* {
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+.gridcontainer {
+  display: grid;
+  grid-template-areas:
+    "head head"
+    "mid mid";
+}
+.topbar {
+  background-color: white;
+  height: 8vh;
+  grid-area: head;
+}
+.header {
+  color: white;
+  text-align: center;
+  padding-top: 5em;
+}
+.button {
+  background-color: chartreuse;
+  color: white;
+  text-align: center;
+  width: 150px;
+  border-radius: 25px;
+  font-size: 1.5em;
+  margin-top: 1em;
+}
+.midbackdrop {
+  grid-area: mid;
+  background-image: url(../images/flowershop.jpg);
+  background-color: black;
+  background-position: center;
+  background-size: 100%;
+  filter: brightness(40%);
+  z-index: 1;
+}
+.mid {
+  grid-area: mid;
+  height: 60vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
+}
+
+#flowericon,
+#moneyicon,
+#phoneicon,
+#truckicon {
+  max-width: 100%;
+  max-height: 100%;
+  padding: 20px;
+}
+.container-fluid {
+  background-color: #cee7b4;
+  height: 30vh;
+}
+.color {
+  background-color: #cee7b4;
+}
